--- a/ct/public/index.html
+++ b/ct/public/index.html
@@ -39,5 +39,35 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- give feedback code  -->
+    <script type="text/javascript" src="https://jira.cibcatl.com/s/50e7006c5dd2e07b11e0e1713806059a-T/evmnzj/805003/06f8ac18406a341a62c8b8f80fa9f326/3.1.0/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector-embededjs/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector-embededjs.js?locale=en-US&collectorId=4a3037b7"/>
+    <script>
+      window.ATL_JQ_PAGE_PROPS =  {
+        "triggerFunction": function(showCollectorDialog) {
+          //Requires that jQuery is available! 
+          // jQuery("#myCustomTrigger").click(function(e) {
+          //   e.preventDefault();
+          //   showCollectorDialog();
+          // });
+          window.showCollectorDialog = showCollectorDialog;
+        }
+      };
+    </script>
+
+    <!-- raise an issue code -->
+    <script type="text/javascript" src="https://jira.cibcatl.com/s/50e7006c5dd2e07b11e0e1713806059a-T/evmnzj/805003/06f8ac18406a341a62c8b8f80fa9f326/3.1.0/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector-embededjs/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector-embededjs.js?locale=en-US&collectorId=e26dda85"/>
+    <script>
+      window.ATL_JQ_PAGE_PROPS =  {
+        "triggerFunction": function(showCollectorDialog2) {
+          //Requires that jQuery is available! 
+          // jQuery("#myCustomTrigger").click(function(e) {
+          //   e.preventDefault();
+          //   showCollectorDialog();
+          // });
+          window.showCollectorDialog2 = showCollectorDialog2;
+        }
+      };
+    </script>
   </body>
 </html>
